--- a/index.html
+++ b/index.html
@@ -25,16 +25,33 @@
             <img src="croppedtasmia.png" alt="Tasmia Khaled">
         </div>
     </section>
-    <section class="middle">
-        <div class="majhe">
+    <section id="jhamela" class="top">
+        <div class="ordhek">
             <img src="cropreunion.jpg" alt="">
         </div>
-        <div class="majhe">
+        <div class="ordhek" >
             <h2>Dream Big</h2>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/tasmia.khaled">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div id="full-stack"class="ordhek single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web"class="ordhek single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© Tasmia Khaled 2021, a Programming Hero Learner.</p>
+    </footer>
 </body>
 
 </html>
